// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should load the adf with media single inside a bodied extension 1`] = `
Object {
  "content": Array [
    Object {
      "type": "paragraph",
    },
    Object {
      "attrs": Object {
        "extensionKey": "expand",
        "extensionType": "com.atlassian.confluence.macro.core",
        "layout": "default",
        "localId": "testId",
        "parameters": null,
        "text": null,
      },
      "content": Array [
        Object {
          "attrs": Object {
            "layout": "center",
            "width": null,
          },
          "content": Array [
            Object {
              "attrs": Object {
                "__contextId": "DUMMY-OBJECT-ID",
                "__displayType": null,
                "__external": false,
                "__fileMimeType": "image/jpeg",
                "__fileName": "example.png",
                "__fileSize": 58705,
                "alt": "",
                "collection": "MediaServicesSample",
                "height": 500,
                "id": "1234-5678-abcd-efgh",
                "occurrenceKey": null,
                "type": "file",
                "url": null,
                "width": 500,
              },
              "type": "media",
            },
          ],
          "marks": Array [
            Object {
              "attrs": Object {
                "__confluenceMetadata": null,
                "href": "https://gnu.org",
              },
              "type": "link",
            },
          ],
          "type": "mediaSingle",
        },
      ],
      "type": "bodiedExtension",
    },
  ],
  "type": "doc",
}
`;

exports[`should load the adf with media single inside a layout column 1`] = `
Object {
  "content": Array [
    Object {
      "type": "paragraph",
    },
    Object {
      "content": Array [
        Object {
          "attrs": Object {
            "width": 50,
          },
          "content": Array [
            Object {
              "attrs": Object {
                "layout": "center",
                "width": null,
              },
              "content": Array [
                Object {
                  "attrs": Object {
                    "__contextId": "DUMMY-OBJECT-ID",
                    "__displayType": null,
                    "__external": false,
                    "__fileMimeType": "image/jpeg",
                    "__fileName": "example.png",
                    "__fileSize": 58705,
                    "alt": "",
                    "collection": "MediaServicesSample",
                    "height": 500,
                    "id": "1234-5678-abcd-efgh",
                    "occurrenceKey": null,
                    "type": "file",
                    "url": null,
                    "width": 500,
                  },
                  "type": "media",
                },
              ],
              "marks": Array [
                Object {
                  "attrs": Object {
                    "__confluenceMetadata": null,
                    "href": "https://gnu.org",
                  },
                  "type": "link",
                },
              ],
              "type": "mediaSingle",
            },
          ],
          "type": "layoutColumn",
        },
        Object {
          "attrs": Object {
            "width": 50,
          },
          "content": Array [
            Object {
              "type": "paragraph",
            },
          ],
          "type": "layoutColumn",
        },
      ],
      "type": "layoutSection",
    },
  ],
  "type": "doc",
}
`;

exports[`should load the adf with media single inside a list item 1`] = `
Object {
  "content": Array [
    Object {
      "type": "paragraph",
    },
    Object {
      "content": Array [
        Object {
          "content": Array [
            Object {
              "content": Array [
                Object {
                  "text": "Um",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
          ],
          "type": "listItem",
        },
        Object {
          "content": Array [
            Object {
              "content": Array [
                Object {
                  "text": "Dois",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
          ],
          "type": "listItem",
        },
        Object {
          "content": Array [
            Object {
              "attrs": Object {
                "layout": "center",
                "width": null,
              },
              "content": Array [
                Object {
                  "attrs": Object {
                    "__contextId": "DUMMY-OBJECT-ID",
                    "__displayType": null,
                    "__external": false,
                    "__fileMimeType": "image/jpeg",
                    "__fileName": "example.png",
                    "__fileSize": 58705,
                    "alt": "",
                    "collection": "MediaServicesSample",
                    "height": 500,
                    "id": "1234-5678-abcd-efgh",
                    "occurrenceKey": null,
                    "type": "file",
                    "url": null,
                    "width": 500,
                  },
                  "type": "media",
                },
              ],
              "marks": Array [
                Object {
                  "attrs": Object {
                    "__confluenceMetadata": null,
                    "href": "https://gnu.org",
                  },
                  "type": "link",
                },
              ],
              "type": "mediaSingle",
            },
            Object {
              "type": "paragraph",
            },
          ],
          "type": "listItem",
        },
        Object {
          "content": Array [
            Object {
              "content": Array [
                Object {
                  "text": "Tres",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
          ],
          "type": "listItem",
        },
      ],
      "type": "bulletList",
    },
  ],
  "type": "doc",
}
`;

exports[`should load the adf with media single inside a nested expand 1`] = `
Object {
  "content": Array [
    Object {
      "type": "paragraph",
    },
    Object {
      "attrs": Object {
        "__expanded": true,
        "title": "",
      },
      "content": Array [
        Object {
          "attrs": Object {
            "__autoSize": false,
            "isNumberColumnEnabled": false,
            "layout": "default",
            "localId": "abc-123",
          },
          "content": Array [
            Object {
              "content": Array [
                Object {
                  "attrs": Object {
                    "background": null,
                    "colspan": 1,
                    "colwidth": null,
                    "rowspan": 1,
                  },
                  "content": Array [
                    Object {
                      "attrs": Object {
                        "__expanded": true,
                        "title": "",
                      },
                      "content": Array [
                        Object {
                          "attrs": Object {
                            "layout": "center",
                            "width": null,
                          },
                          "content": Array [
                            Object {
                              "attrs": Object {
                                "__contextId": "DUMMY-OBJECT-ID",
                                "__displayType": null,
                                "__external": false,
                                "__fileMimeType": "image/jpeg",
                                "__fileName": "example.png",
                                "__fileSize": 58705,
                                "alt": "",
                                "collection": "MediaServicesSample",
                                "height": 500,
                                "id": "1234-5678-abcd-efgh",
                                "occurrenceKey": null,
                                "type": "file",
                                "url": null,
                                "width": 500,
                              },
                              "type": "media",
                            },
                          ],
                          "marks": Array [
                            Object {
                              "attrs": Object {
                                "__confluenceMetadata": null,
                                "href": "https://gnu.org",
                              },
                              "type": "link",
                            },
                          ],
                          "type": "mediaSingle",
                        },
                      ],
                      "type": "nestedExpand",
                    },
                  ],
                  "type": "tableCell",
                },
              ],
              "type": "tableRow",
            },
          ],
          "type": "table",
        },
      ],
      "type": "expand",
    },
  ],
  "type": "doc",
}
`;

exports[`should load the adf with media single inside a table cell 1`] = `
Object {
  "content": Array [
    Object {
      "type": "paragraph",
    },
    Object {
      "attrs": Object {
        "__autoSize": false,
        "isNumberColumnEnabled": false,
        "layout": "default",
        "localId": "abc-123",
      },
      "content": Array [
        Object {
          "content": Array [
            Object {
              "attrs": Object {
                "background": null,
                "colspan": 1,
                "colwidth": null,
                "rowspan": 1,
              },
              "content": Array [
                Object {
                  "attrs": Object {
                    "layout": "center",
                    "width": null,
                  },
                  "content": Array [
                    Object {
                      "attrs": Object {
                        "__contextId": "DUMMY-OBJECT-ID",
                        "__displayType": null,
                        "__external": false,
                        "__fileMimeType": "image/jpeg",
                        "__fileName": "example.png",
                        "__fileSize": 58705,
                        "alt": "",
                        "collection": "MediaServicesSample",
                        "height": 500,
                        "id": "1234-5678-abcd-efgh",
                        "occurrenceKey": null,
                        "type": "file",
                        "url": null,
                        "width": 500,
                      },
                      "type": "media",
                    },
                  ],
                  "marks": Array [
                    Object {
                      "attrs": Object {
                        "__confluenceMetadata": null,
                        "href": "https://gnu.org",
                      },
                      "type": "link",
                    },
                  ],
                  "type": "mediaSingle",
                },
              ],
              "type": "tableCell",
            },
          ],
          "type": "tableRow",
        },
      ],
      "type": "table",
    },
  ],
  "type": "doc",
}
`;

exports[`should load the adf with media single inside an expand 1`] = `
Object {
  "content": Array [
    Object {
      "type": "paragraph",
    },
    Object {
      "attrs": Object {
        "__expanded": true,
        "title": "",
      },
      "content": Array [
        Object {
          "attrs": Object {
            "layout": "center",
            "width": null,
          },
          "content": Array [
            Object {
              "attrs": Object {
                "__contextId": "DUMMY-OBJECT-ID",
                "__displayType": null,
                "__external": false,
                "__fileMimeType": "image/jpeg",
                "__fileName": "example.png",
                "__fileSize": 58705,
                "alt": "",
                "collection": "MediaServicesSample",
                "height": 500,
                "id": "1234-5678-abcd-efgh",
                "occurrenceKey": null,
                "type": "file",
                "url": null,
                "width": 500,
              },
              "type": "media",
            },
          ],
          "marks": Array [
            Object {
              "attrs": Object {
                "__confluenceMetadata": null,
                "href": "https://gnu.org",
              },
              "type": "link",
            },
          ],
          "type": "mediaSingle",
        },
        Object {
          "type": "paragraph",
        },
      ],
      "type": "expand",
    },
  ],
  "type": "doc",
}
`;
